# 3d_mapping

./: README.md
correct_icp_mapper_pose/: CMakeLists.txt  package.xml
correct_icp_mapper_pose/launch/: map_interact.launch
correct_icp_mapper_pose/src/: CorrectPose.cpp  CorrectWorldOdom.cpp  correct_pose.cpp  correct_world_odom.cpp
header_manipulation/: package.xml
header_manipulation/src/: time_modification_node.cpp
hector_icp_mapping/: CMakeLists.txt  package.xml
hector_icp_mapping/config/: atlas_lidar_self_filter.yaml  hector_lidar_self_filter.yaml  icp.yaml  input_filters.yaml  map_post_filters.yaml  multisensor_head_controllers.yaml
hector_icp_mapping/launch/: 3d_mapping_obelix.launch  ekf_localization.launch  hector_costmap.launch  hydra_head_controllers.launch  icp_mapper.launch  icp_mapper_atlas.launch  icp_mapper_calibration.launch  icp_mapper_obelix.launch  icp_mapper_obelix_sim.launch  icp_mapper_online.launch  icp_mapper_prototype.launch  icp_mapper_prototype_old_bag.launch  laser_calibration.launch  lidar_proc.launch  multisensor_head_controller.launch  multisensor_head_controllers.launch  preprocessing.launch  preprocessing_atlas.launch  preprocessing_calibration.launch  preprocessing_hector_sim.launch  preprocessing_obelix.launch  preprocessing_obelix_sim.launch  preprocessing_sim.launch  preprocessing_sim_obelix.launch
pointcloud_assembler_trigger/: CMakeLists.txt  package.xml
pointcloud_assembler_trigger/cfg/: AssemblerTrigger.cfg  PointcloudAssemblerTrigger.cfg
pointcloud_assembler_trigger/include/pointcloud_assembler_trigger/: AssemblerTrigger.h  TriggerInterfaceProvider.h  pc_assembler_trigger.h
pointcloud_assembler_trigger/src/: AssemblerTrigger.cpp  AssemblerTriggerNode.cpp  TriggerInterfaceProvider.cpp  pc_assembler_trigger.cpp  pointcloud_assembler_trigger_node.cpp
