<?xml version="1.0"?>
<package>
  <name>correct_icp_mapper_pose</name>
  <version>0.0.0</version>
  <description>
    The correct_icp_mapper_pose package provides nodes to translate the rviz pose estimate into tf corrections.
    correct_icp_pose calls the icp correct_pose service with the received pose.
    correct_world_odom is a tf publisher for odom_corrected -> odom, starting with an identity transformation.
    It allows to manipulate the world-odom-base_link chain or any other tf between two frames.
  </description>
  <maintainer email="fkunz@sim.tu-darmstadt.de">Florian Kunz</maintainer>
  <license>BSD</license>

  <author email="fkunz@sim.tu-darmstadt.de">Florian Kunz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ethzasl_icp_mapper</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>ethzasl_icp_mapper</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
