<?xml version="1.0"?>
<package>
  <name>hector_icp_mapping</name>
  <version>0.0.0</version>
  <description>A meta package for integration of ethzals_icp_mapper into the hector framework. Providing launch files as well as config files.</description>
  <maintainer email="fkunz@sim.tu-darmstadt.de">Florian Kunz</maintainer>
  <license>BSD</license>

  <author email="fkunz@sim.tu-darmstadt.de">Florian Kunz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>correct_icp_mapper_pose</run_depend>
  <run_depend>ethzasl_icp_mapper</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>pointcloud_assembler_trigger</run_depend>
  <run_depend>vigir_lidar_proc_launch</run_depend>

</package>
